2004-08-10  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cursor.c (refresh_under_cursor): do not refresh
	cursor rectangle with negative width or height
	(draw_cursor_rectangle): do not draw cursor rectangle with
	negative width or height

	Fixes (partialy) #62483

2004-08-03  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_set_style_in_range): avoid setting default
	font size

	Fixes #62086

2004-07-28  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c: ref embedded widget when pushing it to the
	embedded stack and unref it when poping back

	Fixes #61997

2004-07-22  Rodney Dawes  <dobey@novell.com>

	* Makefile.am (AM_CFLAGS, *dir, *_LDADD): Use GTKHTML_API_VERSION
	* gtkhtml.c (gtk_html_class_init): Use GTKHTML_RELEASE_STRING
	* libgtkhtml.pc.in: Use GTKHTML_API_VERSION for directory paths

2004-07-20  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-text.c (set_link): do not leak memory - free
	url, init url, target to NULL to quiet compiler

2004-07-19  Radek Doulik  <rodo@ximian.com>

	* htmlframe.c (html_frame_real_calc_size): as below

	* htmliframe.c (html_iframe_real_calc_size): do not queue size
	request to avoid infinite loop

	* htmlengine.c (html_engine_stream_end): queue resize after
	content is loaded

	* htmlembedded.c: set size of requisition to 0x0 before calling
	size request

	* gtkhtml.c: handle size request, do own size allocate for
	children widgets. move construct call from _new methods to init so
	that it's easy to derive widget from us

	* htmltext.c (save_open_attrs): save <TT>
	(save_close_attrs): save </TT>

2004-06-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-text.c (html_engine_set_link): update it so that
	it handles the link removals as well
	(set_link): call html_text_remove_links or html_object_remove_link
	when complete_url is NULL

	* htmltext.c (html_text_remove_links): new function, removes all
	links from text object

2004-06-24  Radek Doulik  <rodo@ximian.com>
