@@ -7,6 +7,12 @@
 
 	Fixes (partialy) #62483
 
+	* htmltable.c (calc_lowest_fill): return total filled size
+	(divide_upto_preferred_width): fixed to divide the left space
+	correctly and faster
+
+	Fixes #62557
+
 2004-08-03  Radek Doulik  <rodo@ximian.com>
 
 	* htmltext.c (html_text_set_style_in_range): avoid setting default
